--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,11 @@ steps:
     npm install
     npx @11ty/eleventy
   displayName: 'npm install and build'
-
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/_site'
+    ArtifactName: 'site'
+    publishLocation: 'Container'
 
 
 
