--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
   displayName: 'npm install and build'
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/_site/'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/_site/'
     ArtifactName: 'site'
     publishLocation: 'Container'
 
