--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,12 @@ steps:
     PathtoPublish: '$(System.DefaultWorkingDirectory)/_site/'
     ArtifactName: 'site'
     publishLocation: 'Container'
-
+- task: AzureFileCopy@4
+  inputs:
+    SourcePath: '$(System.DefaultWorkingDirectory)/_site/'
+    azureSubscription: 'Azure subscription 1(7a7db31d-7c83-406c-baab-06e4a5e03074)'
+    Destination: 'AzureBlob'
+    storage: 'jasontdev'
+    ContainerName: '$web'
 
 
